# anker-mini

./: .env.example  .gitignore  CHANGELOG.md  DEMO.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
code/: bot.py  cli.py  config.py  menubar.py  scheduler.py  skill_runner.py
docker/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
examples/: README.md  daily-brief.md  weekly-review.md
scripts/: install_bot.sh
tests/: test_smoke.py
